--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>CSS Pacman</title>
     <meta charset="UTF-8">
     <meta name="description" content="CSS Pacman">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="https://anaiahl.github.io/csspacmanassignment/css/style.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
