--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <img src="img/Blinky.png" alt="Red ghost">
                     </div>
                     <div class="clyde">
-                        <img src="img/clyde.png" alt="Orange ghost">
+                        <img src="img/Clyde.png" alt="Orange ghost">
                     </div>
                 </div>
             </div>
